fix: z-index fix for header

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -68,6 +68,7 @@ a:hover {
   top: 0px;
   padding-top: 3rem;
   justify-content: space-between;
+  z-index: 2;
 }
 #nav .nav-separator {
   padding-top: 8px;
